[gd_scene load_steps=6 format=3 uid="uid://nfvyd5vcvcvl"]

[ext_resource type="Script" path="res://ScoreBoard.gd" id="1_pu0un"]

[sub_resource type="LabelSettings" id="LabelSettings_bnmta"]
font_size = 35

[sub_resource type="Theme" id="Theme_ncb6d"]
default_font_size = 29

[sub_resource type="Theme" id="Theme_ypevp"]
default_font_size = 29

[sub_resource type="Theme" id="Theme_d42d2"]
default_font_size = 29

[node name="ScoreBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pu0un")

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_top = 13.0
offset_right = 1152.0
offset_bottom = 342.0
label_settings = SubResource("LabelSettings_bnmta")
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 379.0
offset_right = 459.0
offset_bottom = 458.0
text = "Modify Points: "
label_settings = SubResource("LabelSettings_bnmta")
vertical_alignment = 1

[node name="txtpoints" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 367.0
offset_top = 383.0
offset_right = 684.0
offset_bottom = 465.0

[node name="btnup" type="Button" parent="."]
modulate = Color(0.298039, 1, 0, 1)
layout_mode = 0
offset_left = 60.0
offset_top = 522.0
offset_right = 274.0
offset_bottom = 618.0
theme = SubResource("Theme_ncb6d")
text = "Update"

[node name="btnre" type="Button" parent="."]
modulate = Color(0, 0.984314, 1, 1)
layout_mode = 0
offset_left = 347.0
offset_top = 525.0
offset_right = 561.0
offset_bottom = 621.0
theme = SubResource("Theme_ypevp")
text = "Reset"

[node name="btnexit" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
layout_mode = 0
offset_left = 985.0
offset_top = 546.0
offset_right = 1141.0
offset_bottom = 634.0
theme = SubResource("Theme_d42d2")
text = "Exit"

[connection signal="pressed" from="btnup" to="." method="_on_btnup_pressed"]
[connection signal="pressed" from="btnre" to="." method="_on_btnre_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
